--- a/ensure_wasm/index.html
+++ b/ensure_wasm/index.html
@@ -14,7 +14,7 @@
       // will "boot" the module and make it ready to use. Currently browsers
       // don't support natively imported WebAssembly as an ES module, but
       // eventually the manual initialization won't be required!
-      import init, { deku_read } from './pkg/ensure_wasm.js';
+      import init, { deku_read, deku_write } from './pkg/ensure_wasm.js';
 
       async function run() {
         // First up we need to actually load the wasm file, so we use the
@@ -46,10 +46,15 @@
         await init();
 
         // And afterwards we can use all the functionality defined in wasm.
-        const result = deku_read("ad02beef");
-        console.log(`Result = ${result}`);
-        if (result !== "DekuTest { field_a: 21, field_b: 5, count: 2, data: [190, 239] }")
-          throw new Error("wasm addition doesn't work!");
+        let input = new Uint8Array([0xAD, 0xBE]);
+        console.log(input);
+
+        const ret_read = deku_read(input);
+        console.log(ret_read);
+
+        const ret_write = deku_write(ret_read);
+        console.log(ret_write);
+
       }
 
       run();
